save databaseg changes in project

--- a/WareHouse_MS/WareHouse_MS.csproj
+++ b/WareHouse_MS/WareHouse_MS.csproj
@@ -43,11 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\Product.cs" />
+    <Compile Include="Domain\Stock.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Database\ProductJson.json" />
+    <None Include="Database\StockJson.json" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
