Add and GetAll Methods in ProductRepository has Implemented

--- a/WareHouse_MS/WareHouse_MS.csproj
+++ b/WareHouse_MS/WareHouse_MS.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +49,7 @@
     <Compile Include="Domain\Product.cs" />
     <Compile Include="Domain\Stock.cs" />
     <Compile Include="Interface\IProductRepository.cs" />
+    <Compile Include="Interface\ProductRepository.cs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -53,6 +57,7 @@
     <None Include="App.config" />
     <None Include="Database\ProductJson.json" />
     <None Include="Database\StockJson.json" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
