complete ProductRepository Method implementation

--- a/WareHouse_MS/WareHouse_MS.csproj
+++ b/WareHouse_MS/WareHouse_MS.csproj
@@ -46,10 +46,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common.cs" />
+    <Compile Include="CustomException.cs" />
     <Compile Include="Domain\Product.cs" />
     <Compile Include="Domain\Stock.cs" />
+    <Compile Include="Interface\ExtentionMethods.cs" />
     <Compile Include="Interface\IProductRepository.cs" />
+    <Compile Include="Interface\IStockRepository.cs" />
     <Compile Include="Interface\ProductRepository.cs.cs" />
+    <Compile Include="Interface\StockRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
